#	$Id$	

Changelog

* Fix sendfax to accept both destination and user subaddresses
  (Bug 762) (21 Apr 2006)
* Repair broken MMR from some Multitech modems (BUG 763) (21 Apr 2006)

Changelog for HylaFAX 4.3.0rc1

* Add JobControlWait to allow faxq to wait for JobControlCmd
  to finish synchronously (4 Apr 2006)
* flush modem I/O on receptions before sending any data (03 Apr 2006)
* fix incorrect "Fax protocol error" in ECM mode (03 Apr 2006)
* add German NSFs and correct HylaFAX NSF bit order (03 Apr 2006)
* set Class1RMPersistence to 0 in digi config prototype (03 Apr 2006)
* extend V.21 HDLC frame reception timeout to 10 sec (03 Apr 2006)
* ignore MESSAGE-WAITING response after dialing (02 Apr 2006)
* Correctly remove EOFB at the end of MMR images (02,10 Apr 2006)
* set minimum of 4800 for V.34 primary rate renegotiations (02 Apr 2006)
* improve handling of V.34 control channel retrain (02 Apr 2006)
* Add isdn4linux modem config prototype (02 Apr 2006)
* Add IAXmodem config prototype (02 Apr 2006)
* Update config.guess & config.sub (27 Mar 2006)
* Add JobControl (obsoletes DestControl) (27 Mar 2006)
* Fix hfaxd SNPP login code to 250 (Bug 732) (27 Mar 2006)
* Fix hfaxd timezone handling on new GLIBC (BUG 723) (24 Mar 2006)
* Fix locking of recvq tiff files (BUG 739) (23 Mar 2006)
* fix batching of page jobs (23 Mar 2006)
* expand Class1JBIGSupport to allow for differentiation
  between full, none, send, and receive support (17 Mar 2006)
* remove QualifyCID in lieu of DynamicConfig RejectCall (15 Mar 2006)
* fix buffer overrun in NSF parsing (21 Feb 2006)
* add dictionary for notify, faxrcvd, and pollrcvd
  internationalization support (21 Feb 2006)
* add CHARSET config option for mailing scripts (21 Feb 2006)
* use To-Company and To-Name coverpage entries in the notification
  message if they are available to use (21 Feb 2006)
* add support for libtiff-3.8 (31 Jan 2006)
* use PDF in q-files when appropriate (30 Jan 2006)