@@ -2,8 +2,9 @@
 
 Changelog
 
+* Fix quoted-printable MIME encoding in faxrcvd (BUG 760) (21 Apr 2006)
 * Fix sendfax to accept both destination and user subaddresses
-  (Bug 762) (21 Apr 2006)
+  (BUG 762) (21 Apr 2006)
 * Repair broken MMR from some Multitech modems (BUG 763) (21 Apr 2006)
 
 Changelog for HylaFAX 4.3.0rc1
